--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <p>© 2025 Eleni Gashaw Tesfaye — All Rights Reserved.</p>
+            <p>© 2025 Eleni Gashaw Tesfaye — All Rights Reserved. Developed by Esrael Admasu 0934060592</p>
         </div>
     </footer>
 
@@ -1177,4 +1177,5 @@
         });
     </script>
 </body>
+
 </html>
