--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <p>© 2025 Eleni Gashaw Tesfaye — All Rights Reserved. Developed by Esrael Admasu 0934060592</p>
+            <p>© 2025 Eleni Gashaw Tesfaye — All Rights Reserved. <br>Developed by Esrael Admasu 0934060592</p>
         </div>
     </footer>
 
@@ -1179,3 +1179,4 @@
 </body>
 
 </html>
+
